examples/modules/expected/0912-modules-deep-qualified-call-hidden.stderr
error: namespace 'two' has no member 'three'
  --> examples/modules/0912-modules-deep-qualified-call-hidden.sx:8:5
   |
 8 |     facade.one.two.three.engine.value();
   |     ^^^^^^^^^^^^^^^^^^^^
